CLIO-31255: Fixed issue with close icon shifting

--- a/themis_components/thAlert/index.scss
+++ b/themis_components/thAlert/index.scss
@@ -50,8 +50,7 @@
     vertical-align: middle;
     font-size: 18px;
 
-    &.fa-check,
-    &.fa-warning {
+    &:not(.fa-times-circle) {
       color: #fff;
       text-align: center;
       width: 40px;
